--- a/swingcr/index.html
+++ b/swingcr/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/src/images/logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>swingcr</title>
+    <title>VII Festival Swing Ciudad Real</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    
   </body>
+  <script type="module" src="/src/main.js"></script>
 </html>
