barra de navegación implementada

--- a/swingcr/index.html
+++ b/swingcr/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/src/images/logo.png"/>
@@ -7,7 +7,27 @@
     <title>VII Festival Swing Ciudad Real</title>
   </head>
   <body>
-    
+    <header>
+      <div id="encabezado">
+        <img src="/src/images/logo.png" alt="logo" id="logo">
+        <div id="titulo" class="titulo">VII Festival Swing Ciudad Real</div>
+      </div>
+      <nav id="barra-navegacion">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#sobre-nosotros">Sobre nosotros</a></li>
+          <li><a href="#horario">Horario</a></li>
+          <li><a href="#registrar-evento">Registrar un evento</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div id="bailarines">
+      <img src="/src/images/bailarines1.png" alt="bailarines1">
+      <img src="/src/images/bailarines2.png" alt="bailarines2">
+      <img src="/src/images/bailarines3.png" alt="bailarines3">
+    </div>
+
   </body>
   <script type="module" src="/src/main.js"></script>
 </html>
