implementación del panel informativo sobre el festival

--- a/swingcr/index.html
+++ b/swingcr/index.html
@@ -27,6 +27,16 @@
       <img src="/src/images/bailarines2.png" alt="bailarines2">
       <img src="/src/images/bailarines3.png" alt="bailarines3">
     </div>
+    <section id="sobre-nosotros">
+      <h2>EL FESTIVAL</h2>
+      <div class="contenido-sobre-nosotros">
+      <img src="/src/images/todos.jpg" alt="todos" id="todos">
+      <p>
+        El fin de semana del 10 al 12 de octubre es la fecha elegida para la celebración del VII Festival Swing Ciudad Real. Tras seis ediciones, la primera de ellas en formato Exchange (y una pandemia de por medio) este festival sigue creciendo. La quinta edición contó con más de 200 bailarines venidos de diferentes puntos del país.<br><br>
+        Además, hasta ahora han participado profesores de la talla de Núria Bonet, Álex Mas, Lee Meidan, Lourdes Collado, Vincent Pitou, Carlos Cayuela, Carla Stinus, Andrés Lázaro, María & Aurélien, María & Núria, Ari & Simon, Clàudia, la Demo Swing Lab y Héctor y Sonia, Aiala y Gurutz, Tyedric Hill y Viktor Lillard, Quinndy, Tamara Lobato y Lara Cano, Rossana Tamiello; y bandas como The Jazz on Five, Basement Band, Le dancing Pepa, Enric Peidro Swingtet y la Old Dixieland Band.
+      </p>
+      </div>
+    </section>
 
   </body>
   <script type="module" src="/src/main.js"></script>
