cambio en ruta al encabezado desde la barra de navegación

--- a/swingcr/index.html
+++ b/swingcr/index.html
@@ -14,7 +14,7 @@
       </div>
       <nav id="barra-navegacion">
         <ul>
-          <li><a href="#home">Home</a></li>
+          <li><a href="#encabezado">Home</a></li>
           <li><a href="#sobre-nosotros">Sobre nosotros</a></li>
           <li><a href="#horario">Horario</a></li>
           <li><a href="#formulario">Registrar un evento</a></li>
