mejoras implementadas en el formulario para registrar un evento

--- a/swingcr/index.html
+++ b/swingcr/index.html
@@ -183,6 +183,49 @@
           <option value="domingo">Domingo 12</option>
         </select>
 
+        <label for="nivel-clase">Nivel de clase:</label>
+        <select id="nivel-clase" name="nivel-clase" required>
+          <option value="" disabled selected>Seleccione un nivel</option>
+          <option value="basico">Básico</option>
+          <option value="intermedio">Intermedio</option>
+          <option value="avanzado">Avanzado</option>
+        </select>
+
+        <label for="banda">¿Hay una banda?</label>
+        <select id="banda" name="banda" required>
+          <option value="" disabled selected>Seleccione una opción</option>
+          <option value="banda-si">Sí</option>
+          <option value="banda-no">No</option>
+        </select>
+
+        <label for="tipo-actividad">Tipo de actividad:</label>
+        <select id="tipo-actividad" name="tipo-actividad" required>
+          <option value="" disabled selected>Seleccione un tipo</option>
+          <option value="tester">Taster</option>
+          <option value="social">Social</option>
+          <option value="concierto">Concierto</option>
+          <option value="mix&match">Mix & Match</option>
+        </select>
+
+        <label for="profesor">Profesor:</label>
+        <select id="profesor" name="profesor" required>
+          <option value="" disabled selected>Seleccione un profesor</option>
+          <option value="profesor1">Hyunjung & Anders</option>
+          <option value="profesor2">Marta & Pedro</option>
+          <option value="profesor3">Swinghappy</option>
+        </select>
+
+        <label for="estilo">Estilo:</label>
+        <select id="estilo" name="estilo" required>
+          <option value="" disabled selected>Seleccione un estilo</option>
+          <option value="estilo1">Lindy hop</option>
+          <option value="estilo2">Shag</option>
+          <option value="estilo3">Sólo jazz</option>
+        </select>
+
+        <label for="descripcion-actividad">Descripción de la actividad:</label>
+        <input type="text" id="descripcion-actividad" name="descripcion-actividad" />
+
         <label for="hora-evento">Hora del evento:</label>
         <input type="time" id="hora-evento" name="hora-evento" required />
 
