implementación del modal y reconstrucción del código de js

--- a/swingcr/index.html
+++ b/swingcr/index.html
@@ -233,6 +233,22 @@
       </form>
       </div>
     </section>
+    <div id="modal-evento" class="modal oculto">
+      <div class="modal-contenido">
+        <span id="cerrar-modal" class="cerrar">&times;</span>
+        <h3 id="modal-nombre">Nombre</h3>
+        <p><strong>Tipo:</strong> <span id="modal-tipo-evento"></span></p>
+        <p><strong>Día:</strong> <span id="modal-dia-evento"></span></p>
+        <p><strong>Hora:</strong> <span id="modal-hora-evento"></span></p>
+        <p><strong>Ubicación:</strong> <span id="modal-ubicacion-evento"></span></p>
+        <p><strong>Nivel:</strong> <span id="modal-nivel-evento"></span></p>
+        <p><strong>Profesor:</strong> <span id="modal-profesor-evento"></span></p>
+        <p><strong>Estilo:</strong> <span id="modal-estilo-evento"></span></p>
+        <p><strong>Banda:</strong> <span id="modal-banda-evento"></span></p>
+        <p><strong>Tipo de actividad:</strong> <span id="modal-tipo-actividad-evento"></span></p>
+        <p><strong>Descripción:</strong> <span id="modal-descripcion-evento"></span></p>
+      </div>
+    </div>
   </body>
   <footer>
     <div class="footer-container" id="contacto">
